2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Bump Mono.Addins version.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.CecilReflector.csproj: Update target framework
	  to 2.0.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.CecilReflector.csproj: Properly sign assemblies.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * Mono.Addins.CecilReflector.csproj: Updated.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.CecilReflector.csproj, Mono.Addins.CecilReflector.mdp:
	  Use msbuild file format for projects. Removed the old MD1 projects.

2008-07-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.CecilReflector/Reflector.cs: Properly convert attributes
	  when found an attribute which is a subclass of the required type.
	  Fixes a bug when requestion AddinAttribute, since
	  AddinRootAttribute should be returned too.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.CecilReflector/Reflector.cs: Fix retrieval of inherited
	  attributes. Fix code that get the list of base interfaces.

2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.CecilReflector/Reflector.cs: Fix bug in GetCustomAttribute.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Added makefile.
